--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
+    "passport": "^0.6.0",
+    "passport-google-oidc": "^0.1.0",
     "pug": "^3.0.2",
     "sequelize": "^5.0.0-beta.11",
     "socket.io": "^4.5.4"
