--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oidc": "^0.1.0",
     "pug": "^3.0.2",
     "sequelize": "^5.0.0-beta.11",
