--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-
-JWT_SECRET={"YOUR_RANDOM_SECRET_VALUE"}
+MONGODB_URI=mongodb+srv://ciro:ciro@cluster0.5izgbwo.mongodb.net/app
+JWT_SECRET=YOUR_RANDOM_SECRET_VALUE
