--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "ejs": "^3.1.8",
     "express": "^4.16.3",
     "express-handlebars": "^6.0.6",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "ioredis": "^5.2.5",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
