--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 MONGODB_URI=mongodb+srv://ciro:ciro@cluster0.5izgbwo.mongodb.net/app
 JWT_SECRET=YOUR_RANDOM_SECRET_VALUE
+
+HOST = 'smtp.gmail.com'
+USER = 'ildecimoapp@gmail.com'
+PASS = 'wafbgjedgkrxzyit'
+SERVICE = 
+BASE_URL = 'http://localhost:5000'
