--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
+    "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oidc": "^0.1.0",
