commit per deploy

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ HOST = 'smtp.gmail.com'
 USER = 'ildecimoapp@gmail.com'
 PASS = 'wafbgjedgkrxzyit'
 SERVICE = 
-BASE_URL = 'http://localhost:5000'
+BASE_URL = 'https://ildecimo.it'
