--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MONGODB_URI=mongodb+srv://ciro:ciro@cluster0.5izgbwo.mongodb.net/app
 JWT_SECRET=YOUR_RANDOM_SECRET_VALUE
 
-HOST = 'smtp.gmail.com'
-USER = 'ildecimoapp@gmail.com'
-PASS = 'wafbgjedgkrxzyit'
-SERVICE = 
+HOST = 'smtps.aruba.it'
+USER = 'noreply@ildecimo.it'
+PASS = 'Verolino33!'
+SERVICE = "aruba"
 BASE_URL = 'https://ildecimo.it'
