--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oidc": "^0.1.0",
+    "password-generator": "^2.3.2",
     "pug": "^3.0.2",
     "sequelize": "^5.0.0-beta.11",
     "socket.io": "^4.5.4"
