1) Introduzione nuova pagina di rendering per la conferma della e-mail, 2) Implementazione "expiration" dell'utente se non conferma l'email, 3) Risoluzione problema di "exiration" dei tentativi di login 4) Altro

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ HOST = 'smtps.aruba.it'
 USER = 'noreply@ildecimo.it'
 PASS = 'Verolino33!'
 SERVICE = "aruba"
-BASE_URL = 'https://ildecimo.it'
+BASE_URL = 'http://localhost:5000'
