--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "password-generator": "^2.3.2",
     "pug": "^3.0.2",
     "sequelize": "^5.0.0-beta.11",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "winston": "^3.8.2"
   }
 }
