Implementazione logging + invio log su DB

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb+srv://ciro:ciro@cluster0.5izgbwo.mongodb.net/app
+MONGODB_URI=mongodb+srv://ildecimoapp:fCalI0HKXvZzlbrU@cluster0.5izgbwo.mongodb.net/app
+MONGODB_URI_LOGS=mongodb+srv://logManager:AwOB9lyC8jku8ULx@cluster0.5izgbwo.mongodb.net/app_logs
 JWT_SECRET=YOUR_RANDOM_SECRET_VALUE
 
 HOST = 'smtps.aruba.it'
