--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
+    "node-vault": "^0.9.22",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
