--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
@@ -37,6 +39,7 @@
     "password-generator": "^2.3.2",
     "sequelize": "^5.0.0-beta.11",
     "socket.io": "^4.5.4",
+    "toobusy-js": "^0.5.1",
     "winston": "^3.8.2",
     "winston-mongodb": "^5.1.1"
   }
