--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
+    "helmet-csp": "^3.4.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.1.6",
